--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!--header-->
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="ruota panoramica londra">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="ponte londra 1">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="ponte londra 2">
+    </header>
+    <!--/header-->
+
 </body>
 </html>
