--- a/index.html
+++ b/index.html
@@ -17,5 +17,49 @@
     </header>
     <!--/header-->
 
+    <hr>
+
+    <!--main-->
+    <main>
+        <!--table section-->
+        <h2>Le mie spese</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>  
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>  
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>  
+                </tr>
+
+                <tr>
+                    <td colspan="2">Totale</td>
+                    <td>360&euro;</td>  
+                </tr>
+            </tbody>
+        </table>
+        <!--/table section-->
+    </main>
+    <!--/main-->
+    
 </body>
 </html>
