--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
             </tbody>
         </table>
         <!--/table section-->
+
+        <hr>
+
+        <!--unordered list section-->
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London&times;</li>
+            <li>Visitare greenwich&radic;</li>
+            <li>Ascoltare un'artista di strada a Covent Garden&radic;</li>
+            <li>Mangiare il tipico Fish and Chips inglese&times;</li>
+        </ul>
+        <!--/unordered list section-->
+
+        <hr>
+        
     </main>
     <!--/main-->
     
