tradotti i commenti dall'inglese all'italiano

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--main-->
     <main>
-        <!--table section-->
+        <!--sezione tabella-->
         <h2>Le mie spese</h2>
         <table>
             <thead>
@@ -57,11 +57,11 @@
                 </tr>
             </tbody>
         </table>
-        <!--/table section-->
+        <!--/sezione tabella-->
 
         <hr>
 
-        <!--unordered list section-->
+        <!--sezione cose da fare-->
         <h3>Cose da fare</h3>
         <ul>
             <li>Visitare la Tower of London&times;</li>
@@ -69,10 +69,14 @@
             <li>Ascoltare un'artista di strada a Covent Garden&radic;</li>
             <li>Mangiare il tipico Fish and Chips inglese&times;</li>
         </ul>
-        <!--/unordered list section-->
+        <!--/sezione cose da fare-->
 
         <hr>
+
+        <!--sezione info utili-->
         
+        <!--/sezione info utili-->
+
     </main>
     <!--/main-->
     
