--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
         </ol>
         <!--/sezione info utili-->
 
+        <hr>
+
+        <!--sezione foto-->
+        <h3>Le foto</h3>
+        <img src="C:\Users\omart\Downloads\london-400x400-compressor_0.jpg" alt="londra">
+        <img src="C:\Users\omart\Downloads\London-Wider-Area-e1597319992670-400x400.jpg" alt="piazza ">
+        <!--/sezione foto-->
+
     </main>
     <!--/main-->
     
