corretto un errore dopo aver utilizzato validator

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
         <!--sezione foto-->
         <h3>Le foto</h3>
-        <img src="C:\Users\omart\Downloads\london-400x400-compressor_0.jpg" alt="londra">
-        <img src="C:\Users\omart\Downloads\London-Wider-Area-e1597319992670-400x400.jpg" alt="piazza ">
+        <img src="C:/Users/omart/Downloads/london-400x400-compressor_0.jpg" alt="londra">
+        <img src="C:/Users/omart/Downloads/London-Wider-Area-e1597319992670-400x400.jpg" alt="piazza ">
         <!--/sezione foto-->
 
     </main>
