--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
                     <td>Biglietto Aereo</td>
                     <td>120&euro;</td>  
                 </tr>
+            </tbody>
 
+            <tfoot>
                 <tr>
                     <td colspan="2">Totale</td>
                     <td>360&euro;</td>  
                 </tr>
-            </tbody>
+            </tfoot>
+            
         </table>
         <!--/sezione tabella-->
 
